# SwiftTrack

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/engine/: CMakeLists.txt  denoiser.cpp  denoiser.h  engine.cpp  engine.h  histories.h  histories.hpp  libfftw3-3.lib  libfftw3l-3.lib  postprocessor.cpp  postprocessor.h  preprocessor.cpp  preprocessor.h
app/src/main/cpp/engine/fftw-3.3.10/: config.status
app/src/main/cpp/engine/fftw-3.3.10/api/.deps/: apiplan.Plo  execute-dft-r2c.Plo  execute-r2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  export-wisdom-to-string.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  mkprinter-file.Plo  mkprinter-str.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-guru-r2r.Plo  plan-guru-split-dft-r2c.Plo  plan-guru64-dft-c2r.Plo  plan-guru64-split-dft-r2c.Plo  plan-many-dft-c2r.Plo  plan-many-dft-r2c.Plo  plan-many-dft.Plo  plan-r2r-2d.Plo  plan-r2r.Plo  print-plan.Plo  rdft2-pad.Plo  the-planner.Plo
app/src/main/cpp/engine/fftw-3.3.10/dft/.deps/: ct.Plo  dftw-direct.Plo  dftw-directsq.Plo  dftw-genericbuf.Plo  indirect.Plo  nop.Plo  plan.Plo  problem.Plo  rader.Plo  rank-geq2.Plo  solve.Plo  zero.Plo
app/src/main/cpp/engine/fftw-3.3.10/doc/: Makefile
app/src/main/cpp/engine/fftw-3.3.10/doc/FAQ/: Makefile
app/src/main/cpp/engine/fftw-3.3.10/kernel/.deps/: assert.Plo  buffered.Plo  cpy2d-pair.Plo  debug.Plo  extract-reim.Plo  hash.Plo  iabs.Plo  kalloc.Plo  md5-1.Plo  minmax.Plo  ops.Plo  pickdim.Plo  plan.Plo  rader.Plo  solver.Plo  tensor1.Plo  tensor2.Plo  tensor3.Plo  tensor4.Plo  tensor5.Plo  tensor7.Plo  tensor9.Plo  tile2d.Plo  trig.Plo
app/src/main/cpp/engine/fftw-3.3.10/libbench2/.deps/: after-ccopy-from.Po  after-ccopy-to.Po  after-hccopy-from.Po  after-rcopy-from.Po  after-rcopy-to.Po  bench-cost-postprocess.Po  bench-main.Po  caset.Po  main.Po  mp.Po  pow2.Po  problem.Po  report.Po  useropt.Po  util.Po  verify-r2r.Po  verify-rdft2.Po  verify.Po  zero.Po
app/src/main/cpp/engine/fftw-3.3.10/m4/: Makefile
app/src/main/cpp/engine/fftw-3.3.10/mpi/: Makefile
app/src/main/cpp/engine/fftw-3.3.10/rdft/.deps/: buffered.Plo  conf.Plo  ct-hc2c-direct.Plo  direct2.Plo  generic.Plo  hc2hc-generic.Plo  indirect.Plo  khc2c.Plo  kr2c.Plo  nop.Plo  nop2.Plo  plan2.Plo  rank-geq2-rdft2.Plo  rank0-rdft2.Plo  rdft2-inplace-strides.Plo  rdft2-strides.Plo  rdft2-tensor-max-index.Plo  vrank-geq1.Plo  vrank3-transpose.Plo
app/src/main/cpp/engine/fftw-3.3.10/reodft/: Makefile
app/src/main/cpp/engine/fftw-3.3.10/reodft/.deps/: conf.Plo  reodft00e-splitradix.Plo
app/src/main/cpp/engine/fftw-3.3.10/simd-support/.deps/: altivec.Plo  avx-128-fma.Plo  avx.Plo  avx2.Plo  kcvi.Plo  neon.Plo  sse2.Plo  taint.Plo
app/src/main/cpp/engine/fftw-3.3.10/tests/: Makefile
app/src/main/cpp/engine/fftw-3.3.5-dll64/: fftw3.h  libfftw3-3.exp  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp
app/src/main/cpp/engine/include/: denoiser.h  engine.h  histories.hpp  postprocessor.h  preprocessor.h
app/src/main/cpp/engine/lib/: BackgroundRemoval.cpp  CMakeLists.txt  NoiseSupression.cpp  NoiseSupression_data.cpp  genCMakeFile.py  my_movmedian.cpp  my_movmedian.h  my_movmedian_data.h  my_movmedian_emxutil.cpp  my_movmedian_emxutil.h  my_movmedian_terminate.h  my_movmedian_types.h  quickselect.cpp  quickselect.h  rtwtypes.h
app/src/main/cpp/engine/lib/include/: BackgroundRemoval.h  NoiseSupression_data.h  NoiseSupression_types.h
app/src/main/cpp/engine/recalibrateHistory/: CMakeLists.txt  dtw.c  dtw.h  eml_mtimes_helper.c  eml_mtimes_helper.h  eml_setop.c  eml_setop.h  filter.c  filter.h  find.c  find.h  findExtents.c  findExtents.h  findpeaks.c  findpeaks.h  interp1.c  interp1.h  ixfun.c  ixfun.h  minOrMax.c  minOrMax.h  prctile.c  prctile.h  recalibrateHistory.c  recalibrateHistory.h  recalibrateHistory_data.c  recalibrateHistory_data.h  recalibrateHistory_emxAPI.c  recalibrateHistory_emxAPI.h  recalibrateHistory_emxutil.c  recalibrateHistory_emxutil.h  recalibrateHistory_initialize.c  recalibrateHistory_initialize.h  recalibrateHistory_terminate.c  recalibrateHistory_terminate.h  recalibrateHistory_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  (+7 more)
app/src/main/cpp/engine/util/: logger_util.hpp  matrix_util.hpp
app/src/main/cpp/engine/util/bits/: stdc++.h
app/src/main/cpp/lib/: BackgroundRemoval.cpp  BackgroundRemoval.h  CMakeLists.txt  NoiseSupression.h  codeGen.cpp  codeGen.h  codeGen_data.cpp  codeGen_data.h  codeGen_types.h  compute_thre_data.cpp  compute_thre_data.h  compute_thre_types.h  my_movmedian_data.cpp  my_movmedian_initialize.cpp  my_movmedian_initialize.h  my_movmedian_terminate.cpp  quickselect.cpp  quickselect.h  rtwtypes.h
app/src/main/cpp/util/: CMakeLists.txt  filter_util.hpp  logger_util.hpp  matrix_util.hpp
(+451 files in other folders)
